fix: 프로젝트 피드백 상세보기 페이지에 대한 기능 전체적으로 수정